--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "fetch:contributors": "node scripts/fetch-contributors.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
